--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,8 @@ div.container {
     display: none;
 }
 
-#fichas {
+/* #Fichas */
+div.toolbar {
     /*
     cursor: ns-resize;
     */
@@ -82,7 +83,7 @@ button.cancel:hover {
 /*-----------------------------
        RECURSO-PRECO
 -----------------------------*/
-#PRECO-mosaicos {
+#PRECO-mosaicos, #CONTACTO-mosaicos {
     display: inline-block;
    /* border: solid 1px rgba(0,0,0,.1);
     margin: 15px;*/
@@ -156,6 +157,39 @@ ul.related-items li {
 
 ul.related-items {
     padding: 0;
+}
+
+/*--------------
+   placeholder
+---------------*/
+::-webkit-input-placeholder {
+ font-size: 14px;
+ color: #d0cdfa;
+ text-transform: uppercase;
+ text-transform: uppercase;
+ text-align: center;
+ font-weight: bold;
+}
+:-moz-placeholder { /* older Firefox*/
+ font-size:14px;
+ color: #d0cdfa;
+ text-transform: uppercase;
+ text-align: center;
+ font-weight: bold;
+}
+::-moz-placeholder { /* Firefox 19+ */ 
+ font-size: 14px;
+ color: #d0cdfa; 
+ text-transform: uppercase;
+ text-align: center;
+ font-weight: bold;
+} 
+:-ms-input-placeholder { 
+ font-size: 14px; 
+ color: #d0cdfa;
+ text-transform: uppercase;
+ text-align: center;
+ font-weight: bold;
 }
 
 /*-------------
@@ -306,14 +340,20 @@ li.bar-item.selected {
     text-decoration: underline;
 }
 
-#fichas {
+/* #Fichas */
+div.toolbar {
     background-color: #DEDEDE;
     border-bottom: solid 1px rgba(0,0,0,.5);
 }
 
-#fichas > div.bar > ul a {
+/* #Fichas */
+div.toolbar > div.bar > ul a {
     color: rgba(0,0,0,.5);
     text-shadow: 0 0 5px rgb(255,255,255);
     font-size: 200%;
     font-weight: 900;
+}
+
+div.toolbox {
+    display: none;
 }
