--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ body {
     display: none;
     text-align: center;
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     z-index: 2;
