--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,8 @@ body {
     vertical-align: middle;
 }
 
-#add-preco {
+#overlay > div {
+    margin-top: 25px;
     vertical-align: middle;
     padding: 0px;
     box-shadow: 0 0 6px 3px rgba(0,0,0,.25);
@@ -287,6 +288,17 @@ ul.row li.null {
     font-style: italic;
 }
 
+ul.row li.tools {
+    border: none;
+}
+
+li.tools img {
+    margin-right: 12px; 
+    display: none;
+    vertical-align: middle; 
+    cursor: pointer;
+}
+
 #RECURSO > div {
     box-shadow: 0 0 4px 0px rgba(0,0,0,.25);
 }
@@ -371,10 +383,10 @@ div.toolbar {
 
 /* #Fichas */
 div.toolbar > div.bar > ul a {
-    color: rgba(0,0,0,.5);
+    color: rgba(0,0,0,.75);
     text-shadow: 0 0 5px rgb(255,255,255);
     font-size: 200%;
-    font-weight: 900;
+    font-weight: bolder;
 }
 
 div.toolbox {
